apps/silverbullet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silverbullet
  namespace: silverbullet
spec:
  selector:
    app: silverbullet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
