apps/silverbullet/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: silverbullet
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`notes.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
      services:
        - name: silverbullet
          port: 80
          namespace: silverbullet
